[project]
name = "statistical-process-control-for-time-series-analytics"
version = "0.1.0"
description = "Companion code for Medium article: statistical process control for time series analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyod>=2.0.0",
    "pyyaml>=6.0.3",
    "signalplot>=0.1",
    "statsmodels>=0.14.6",
    "stumpy>=1.13.0",
    "torch>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
